sumo/tests/sumo/extended/rerouter/errors/xml/destprob_missing_element_begin/errors.sumo
Error: Expected end of tag 'rerouter'
 In file 'input_definition.def.xml'
 At line/column 6/4.

Quitting (on error).
